--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,9 @@
   --footer-pr-icon: rgba(255, 255, 255, 0.1);
   --doptext-col-do: rgba(47, 48, 58, 0.8);
   --bg-modal-col: rgba(0, 0, 0, 0.2);
-  --text-pr-form: #212121;
+
+  --text-pr-form-col: #212121;
+  --border-input-col: rgba(33, 33, 33, 0.2);
 }
 h1,
 h2,
@@ -825,24 +827,46 @@ body {
 } */
 
 /* Form */
-.form-tittle {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-
-  color: var(--text-pr-form);
+.modal-form {
 }
-/* .form-placehold {
+.modal-tittle {
+  margin-bottom: 12px;
+}
+.modal-form-list {
   display: flex;
   flex-direction: column;
-} */
-
+}
+.modal-form-list-title {
+  margin-bottom: 20px;
+}
 .modal-input {
   width: 100%;
+  height: 40px;
+  padding: 0px 43px;
+  border-radius: 4px;
+  border: 1px solid var(--border-input-col);
+}
+
+.modal-input::placeholder {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.2;
+  letter-spacing: 0.01em;
+
+  color: var(--br-solid-col);
 }
 .modal-lable {
   display: flex;
   margin-bottom: 4px;
+
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.2;
+  letter-spacing: 0.01em;
+
+  color: var(--second-col-txt);
+}
+
+.btn-modal {
+  padding: 10px 55px;
 }
