--- a/css/style.css
+++ b/css/style.css
@@ -820,18 +820,18 @@ body {
   fill: black;
 }
 
-/* .is-hidden {
+.is-hidden {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
-} */
+}
 
 /* Form */
 
 .modal-tittle {
-  margin-bottom: 12px;
+  margin-bottom: 31px;
 
-  ont-weight: bold;
+  font-weight: bold;
   font-size: 20px;
   line-height: 23px;
   text-align: center;
@@ -848,25 +848,26 @@ body {
   flex-direction: column;
 }
 .modal-form-list-title {
-  margin-bottom: 20px;
+  position: relative;
+
+  margin-bottom: 32px;
 }
 .modal-input {
   width: 100%;
   height: 40px;
-  padding: 0px 43px;
+  padding-right: 10px;
+  padding-left: 43px;
   border-radius: 4px;
   border: 1px solid var(--border-input-col);
+
+  cursor: pointer;
 }
 
-.modal-input::placeholder {
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 1.2;
-  letter-spacing: 0.01em;
-
-  color: var(--br-solid-col);
-}
 .modal-lable {
+  position: absolute;
+  top: -50%;
+  left: 0;
+
   display: flex;
   margin-bottom: 4px;
 
@@ -876,6 +877,10 @@ body {
   letter-spacing: 0.01em;
 
   color: var(--second-col-txt);
+}
+.modal-input:focus,
+.modal-input:hover {
+  outline: 1px solid #188ce8;
 }
 
 .btn-modal {
