--- a/css/style.css
+++ b/css/style.css
@@ -580,6 +580,7 @@ body {
 .soc-conteiner {
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
 }
 .footer-logo-conteiner {
   margin-right: 70px;
@@ -628,6 +629,45 @@ body {
 .footer-social-link:focus {
   background-color: var(--accent-col);
 }
+
+/* Footer-form */
+.footer-form-conteiner {
+  display: flex;
+  flex-direction: column;
+}
+.footer-form-tittle {
+  margin-bottom: 20px;
+
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--bg-pr-col);
+}
+.footer-form {
+  display: flex;
+}
+.footer-input {
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+  border-radius: 4px;
+
+  background-color: transparent;
+
+  border: 1px solid var(--br-solid-col);
+}
+
+.footer-form-btn {
+  padding: 10px 62px 10px 22px;
+}
+
+.icon-send {
+  fill: currentColor;
+}
+
 /* PORTFOLIO  */
 .filtr {
   padding: 94px 0px;
