--- a/css/style.css
+++ b/css/style.css
@@ -790,7 +790,7 @@ body {
   text-align: left;
   letter-spacing: 0.03em;
 
-  /* overflow: auto;  */
+  
 
   color: var(--bg-pr-col);
   background-color: rgba(33, 150, 243, 0.9);
@@ -892,6 +892,8 @@ body {
 
   margin-bottom: 32px;
 }
+
+
 .modal-input {
   width: 100%;
   height: 40px;
@@ -920,16 +922,18 @@ body {
 
   color: var(--second-col-txt);
 }
-.modal-input:focus,
+ .modal-input:focus,
 .modal-input:hover {
   outline: 1px solid #188ce8;
-}
+} 
+
 
 .modal-icon {
   position: absolute;
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
+  fill: cadetblue;
 }
 
 .btn-modal {
