--- a/css/style.css
+++ b/css/style.css
@@ -790,8 +790,6 @@ body {
   text-align: left;
   letter-spacing: 0.03em;
 
-  
-
   color: var(--bg-pr-col);
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(101%);
@@ -890,28 +888,44 @@ body {
 .modal-form-list-title {
   position: relative;
 
-  margin-bottom: 32px;
+  margin-bottom: 32px; 
 }
-
-
-.modal-input {
-  width: 100%;
-  height: 40px;
-  padding-right: 10px;
-  padding-left: 43px;
+.modal-form-textarea{
+   position: relative;
+   
+}
+.modal-textarea{
+   width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+ 
   border-radius: 4px;
   border: 1px solid var(--border-input-col);
+  outline: transparent;
 
   cursor: pointer;
+
+  transition: border 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  resize: none;
+}
+.modal-textarea::placeholder{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-lable {
+.modal-lable-textarea {
   position: absolute;
-  top: -50%;
+  top: 0;
   left: 0;
+   transform: translateY(-20px); */
 
   display: flex;
-  margin-bottom: 4px;
+  /* margin-bottom: 4px; */
 
   font-weight: normal;
   font-size: 12px;
@@ -922,18 +936,56 @@ body {
 
   color: var(--second-col-txt);
 }
- .modal-input:focus,
-.modal-input:hover {
-  outline: 1px solid #188ce8;
-} 
 
+.modal-input {
+  width: 100%;
+  height: 40px;
+  padding-right: 10px;
+  padding-left: 43px;
+  border-radius: 4px;
+  border: 1px solid var(--border-input-col);
+  outline: transparent;
+
+  cursor: pointer;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:hover,
+.modal-input:focus {
+  border: 1px solid var(--accent-col);
+}
+
+.modal-lable {
+  position: absolute;
+  top: -50%;
+  left: 0;
+
+  display: flex;
+  /* margin-bottom: 4px; */
+
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.2;
+  letter-spacing: 0.01em;
+
+  cursor: pointer;
+
+  color: var(--second-col-txt);
+}
 
 .modal-icon {
   position: absolute;
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
-  fill: cadetblue;
+
+  fill: currentColor;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:hover + .modal-lable + .modal-icon,
+.modal-input:focus + .modal-lable + .modal-icon {
+  fill: var(--accent-col);
 }
 
 .btn-modal {
