--- a/css/style.css
+++ b/css/style.css
@@ -895,7 +895,7 @@ body {
    
 }
 .modal-textarea{
-   width: 100%;
+  width: 100%;
   height: 120px;
   padding: 12px 16px;
  
@@ -905,8 +905,13 @@ body {
 
   cursor: pointer;
 
-  transition: border 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   resize: none;
+}
+.modal-textarea:focus,
+.modal-textarea:hover{
+  border: 1px solid var(--accent-col);
 }
 .modal-textarea::placeholder{
   font-style: normal;
@@ -922,10 +927,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-   transform: translateY(-20px); */
-
-  display: flex;
-  /* margin-bottom: 4px; */
+  transform: translateY(-20px);
 
   font-weight: normal;
   font-size: 12px;
@@ -936,6 +938,9 @@ body {
 
   color: var(--second-col-txt);
 }
+
+
+
 
 .modal-input {
   width: 100%;
@@ -983,10 +988,15 @@ body {
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:hover + .modal-lable + .modal-icon,
-.modal-input:focus + .modal-lable + .modal-icon {
+.modal-input:hover ~ .modal-icon,
+.modal-input:focus ~ .modal-icon {
   fill: var(--accent-col);
 }
+
+.modal-checkbox{
+  display: flex;
+}
+.modal-checkbox-title
 
 .btn-modal {
   padding: 10px 55px;
