--- a/css/style.css
+++ b/css/style.css
@@ -654,6 +654,7 @@ body {
   height: 50px;
   padding: 15px 16px;
   border-radius: 4px;
+  color: #2196f3;
 
   background-color: transparent;
 
@@ -851,12 +852,22 @@ body {
 
   border-radius: 50%;
   background-color: transparent;
-  border: 1px solid var(--br-solid-col);
+  border: 1px solid var(--br-solid-col); 
+
+  cursor: pointer;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
 .icon-close {
-  fill: black;
+  fill: currentColor;
 }
+
+.button-close:focus,
+.button-close:hover{
+  color: var(--hover-btn-col);
+}
+
 
 .is-hidden {
   visibility: hidden;
@@ -878,8 +889,8 @@ body {
   color: var(--text-pr-form-col);
 }
 
-.modal-form {
-}
+
+
 
 .modal-form-list {
   display: flex;
@@ -892,6 +903,7 @@ body {
 }
 .modal-form-textarea{
    position: relative;
+   margin-bottom: 15px;
    
 }
 .modal-textarea{
@@ -995,18 +1007,17 @@ body {
 
 .modal-checkbox{
   display: flex;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 30px;
   
-
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  line-height: 24px;
-  
-  
+  line-height: 2;
   letter-spacing: 0.03em;
   
-  color: #757575;
+  color:var(--second-col-txt);
   
 }
 .modal-checkbox-title{
