--- a/css/style.css
+++ b/css/style.css
@@ -1023,6 +1023,7 @@ body {
   /* transform: translateY(-50%); */
 
   fill: currentColor;
+  cursor: pointer;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
