--- a/css/style.css
+++ b/css/style.css
@@ -889,7 +889,8 @@ body {
 
   cursor: pointer;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-close {
@@ -899,6 +900,8 @@ body {
 .button-close:focus,
 .button-close:hover {
   color: var(--hover-btn-col);
+  border: 1px solid var(--hover-btn-col);
+  outline: none;
 }
 
 .is-hidden {
